package v62.lp;
import "sys/Common.proto";

option java_package = "nirvana.hall.protocol.v62.lp";
option java_outer_classname = "LPCardDelProto";

//添加现场指纹
message LPCardDelRequest{
    extend sys.BaseRequest{
        optional LPCardDelRequest cmd = 9007;
    }
    required string card_id = 1;
}

message LPCardDelResponse{
    extend sys.BaseResponse{
        optional LPCardDelResponse cmd = 9007;
    }
}